...
  @State private var feeds: [Feed] = []
  @State private var errorMessage: String?
  var body: some View {
    if let errorMessage = errorMessage {
      List([fakeErrorItem(message: errorMessage)]) { error in
        Text(error.message)
          .navigationTitle("Feeds")
          .accessibilityIdentifier("ToolbarView")
      }
      .refreshable {
        loadFeeds()
      }
    } else {
...
